--- a/.travis.yml
+++ b/.travis.yml
@@ -56,4 +56,4 @@ matrix:
       env: PUPPET_GEM_VERSION="~> 4" STRICT_VARIABLES="yes"
 
 notifications:
-  email: false
+  email: 'robert.e.hallgren@ericsson.com'
